--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "bulma": "^0.6.2",
         "ioredis": "^3.2.2",
         "socket.io": "^2.0.4"
     }
