--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bulma": "^0.6.2",
+        "font-awesome": "^4.7.0",
         "ioredis": "^3.2.2",
         "socket.io": "^2.0.4"
     }
