Added Bootstrap 4 and adaptive all code for Bootstrap 4

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/js/client.js": "/js/client.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/login/login.js": "/js/login/login.js",
+    "/js/chat/client.js": "/js/chat/client.js"
 }
