--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
+        "laravelnews/laravel-twbs4": "^1.3",
         "predis/predis": "^1.1"
     },
     "require-dev": {
