--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "bulma": "^0.6.2",
         "font-awesome": "^4.7.0",
         "ioredis": "^3.2.2",
+        "moment": "^2.22.0",
+        "mysql": "^2.15.0",
         "socket.io": "^2.0.4"
     }
 }
