Added .env to node server.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "bulma": "^0.6.2",
+        "dotenv": "^5.0.1",
         "font-awesome": "^4.7.0",
         "ioredis": "^3.2.2",
         "moment": "^2.22.0",
