--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "ioredis": "^3.2.2",
         "moment": "^2.22.0",
         "mysql": "^2.15.0",
-        "socket.io": "^2.0.4"
+        "socket.io": "^2.1.0",
+        "vue-socket.io": "^2.1.1-b",
+        "vuesax": "^3.0.2"
     }
 }
