Added socialite to .env

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,11 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+FACEBOOK_ID=id
+FACEBOOK_SECRET=key
+FACEBOOK_URL=urlcallback
+
+GITHUB_ID=id
+GITHUB_SECRET=key
+GITHUB_URL=urlcallback
