--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap": "^4.0.0",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
@@ -20,6 +21,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "browser-sync": "^2.23.6",
         "bulma": "^0.6.2",
         "dotenv": "^5.0.1",
         "font-awesome": "^4.7.0",
@@ -27,6 +29,7 @@
         "moment": "^2.22.0",
         "mysql": "^2.15.0",
         "socket.io": "^2.1.0",
+        "vee-validate": "^2.0.6",
         "vue-socket.io": "^2.1.1-b",
         "vuesax": "^3.0.2"
     }
