--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.8",
         "browser-sync": "^2.23.6",
         "bulma": "^0.6.2",
         "dotenv": "^5.0.1",
@@ -29,8 +30,8 @@
         "moment": "^2.22.0",
         "mysql": "^2.15.0",
         "socket.io": "^2.1.0",
-        "vee-validate": "^2.0.6",
         "vue-socket.io": "^2.1.1-b",
+        "vuelidate": "^0.6.2",
         "vuesax": "^3.0.2"
     }
 }
