--- a/.env.dust.local
+++ b/.env.dust.local
@@ -8,7 +8,7 @@ APP_URL=http://laravel-chat.test
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test_laravel-chat
+DB_DATABASE=test_laravel-chat.test
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
